RESOLVED FIXED63498
[Freetype] Many tests report ERROR: Failed to get glyph page zero.
https://bugs.webkit.org/show_bug.cgi?id=63498
Summary [Freetype] Many tests report ERROR: Failed to get glyph page zero.
Martin Robinson
Reported 2011-06-27 17:30:08 PDT
Many tests report this error to the console: ERROR: Failed to get glyph page zero.
Attachments
Patch (11.16 KB, patch)
2011-06-28 18:01 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-06-28 18:01:55 PDT
Martin Robinson
Comment 2 2011-06-28 18:16:04 PDT
CCing Xan as I hope this can make it into 1.4.2.
Xan Lopez
Comment 3 2011-06-29 13:49:29 PDT
Comment on attachment 99015 [details] Patch OK, seems sane.
WebKit Review Bot
Comment 4 2011-06-29 14:03:26 PDT
Comment on attachment 99015 [details] Patch Clearing flags on attachment: 99015 Committed r90041: <http://trac.webkit.org/changeset/90041>
WebKit Review Bot
Comment 5 2011-06-29 14:03:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.