Source/WebCore/platform/graphics/freetype/GlyphPageTreeNodeFreeType.cpp
@@ -46,8 +46,7 @@ bool GlyphPage::fill(unsigned offset, unsigned length, UChar* buffer, unsigned b
         return false;
 
     cairo_scaled_font_t* scaledFont = fontData->platformData().scaledFont();
-    if (!scaledFont)
-        return false;
+    ASSERT(scaledFont);
 
     FT_Face face = cairo_ft_scaled_font_lock_face(scaledFont);
     if (!face)
